nird/apps/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.2.2
          args: ["start"]
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: "1536Mi"
              cpu: "500m"
            limits:
              memory: "2560Mi"
              cpu: "1000m"
